--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,17 @@
 * {
   font-family: "Outfit", sans-serif;
 }
+
+.reset-tw,
+.reset-tw * {
+  all: revert !important;
+}
+
+.cl-drawerRoot {
+  z-index: 10;
+}
+
+body {
+  padding: 0 !important;
+  margin: 0;
+}
